--- a/NBAWebScraper.ipynb
+++ b/NBAWebScraper.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'm going to create a web scraper to get data from "Basketball Reference" about:",
+    "I'm going to create a web scraper to get data from 'Basketball Reference' about:",
     "1. Past MVP winners\n",
     "2. Players stats per season\n",
     "3. Team record per season"
