--- a/NBA_Predicting_MVP.ipynb
+++ b/NBA_Predicting_MVP.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting The NBA MVP"
+    "# Predicting The Top MVP Nominees"
    ]
   },
   {
